@@ -30,6 +30,7 @@ Version 1.4.1 -- CVS
     (#738130).
   - New function: sm_print_r() intended for debugging.  See
     functions/strings.php
+  - Update config_default to use SM_PATH. (#766577)
 
 Version 1.4.0 -- 3 April 2003
 -----------------------------
